package com.bgzyy.design.pattern.factory.simple.pizzastore.store;

/**
 * 客户端，发订购请求
 * 传统方式
 * Created by bgzyy
 * Email bgzyy@foxmail.com
 * Date 2019/9/6.
 */
public class PizzaStore {
    public static void main(String[] args) {
        new OrderPizza();
    }
}